# sait_with_recipe

./: pyproject.toml
femaelsite/: db.sqlite3  manage.py
femaelsite/femaelsite/: asgi.py  settings.py  urls.py  wsgi.py
femaelsite/star/: admin.py  forms.py  models.py  urls.py  views.py
femaelsite/star/migrations/: 0001_initial.py  0002_alter_recipe_options_recipe_slug_and_more.py  0003_alter_recipe_slug.py  0004_category_recipe_cat.py  0005_alter_recipe_cat.py  0006_alter_category_options_alter_recipe_options_and_more.py
femaelsite/star/static/star/css/: addpage.css  catalog.css  index.css  recipe.css  style.css
femaelsite/star/templates/star/: about.html  addpage.html  base.html  catalog.html  category.html  index.html  recipe.html
femaelsite/users/: forms.py  urls.py  views.py
femaelsite/users/templates/users/: login.html  password_change_done.html  password_change_form.html  register.html  register_done.html
