[project]
name = "django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions>=3.1.1",
    "ipython>=9.4.0",
]

[dependency-groups]
dev = [
    "django",
]

[tool.uv.sources]
django = { workspace = true }
